[package]
name = "devpulse"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "devpulse"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.4.18", features = ["derive"] }
colored = "2"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

[profile.release]
opt-level = 3
strip = true